--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,17 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   awesome_dialog: ^3.2.0
+  awesome_notifications: ^0.9.3+1
+  awesome_notifications_core: ^0.9.3
   bloc: ^8.1.4
   camera: ^0.10.6
-  cloud_firestore: ^4.17.0
+  cloud_firestore: ^5.0.0
   cupertino_icons: ^1.0.6
-  firebase_auth: ^4.19.1
-  firebase_core: ^2.29.0
-  firebase_storage: ^11.7.2
+  firebase_auth: ^5.0.0
+  firebase_core: ^3.0.0
+  firebase_core_platform_interface: ^5.0.0
+  firebase_storage: ^12.0.0
+  fl_chart: ^0.68.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
@@ -43,18 +47,27 @@ dependencies:
   flutter_screenutil: ^5.9.0
   font_awesome_flutter: ^10.7.0
   gap: ^3.0.1
+  geocoding: ^3.0.0
+  geolocator: ^12.0.0
   google_fonts: ^6.2.1
+  google_maps_flutter: ^2.7.0
   google_ml_kit: ^0.18.0
   google_mlkit_face_detection: ^0.11.0
   google_sign_in: ^6.2.1
-  image: ^3.3.0
+  http: ^1.2.1
+  image: ^4.2.0
   image_picker: ^1.1.0
+  intl: ^0.19.0
+  lottie: ^3.1.2
   meta: ^1.11.0
   path: ^1.9.0
+  pdf: ^3.10.8
   permission_handler: ^11.3.1
+  printing: ^5.12.0
   rive: ^0.12.4
+  shared_preferences: ^2.2.3
   tflite_flutter: ^0.10.4
-  tflite_flutter_helper_plus: ^0.0.2
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
