Final product of AttendEase

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,12 +31,12 @@ android {
     ndkVersion "25.1.8937393"
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     sourceSets {
@@ -74,4 +74,5 @@ configurations.all {
         force 'com.squareup.okhttp:okhttp:2.7.5'
         force 'com.squareup.okio:okio:1.17.5'
     }
+    resolutionStrategy.force 'androidx.work:work-runtime:2.7.1'
 }
