--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   bloc: ^8.1.4
   camera: ^0.10.6
   cloud_firestore: ^5.0.0
+  connectivity_plus: ^5.0.2
   cupertino_icons: ^1.0.6
   firebase_auth: ^5.0.0
   firebase_core: ^3.0.0
@@ -42,7 +43,7 @@ dependencies:
   fl_chart: ^0.68.0
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.5
+  flutter_bloc: ^8.1.6
   flutter_offline: ^3.0.1
   flutter_screenutil: ^5.9.0
   font_awesome_flutter: ^10.7.0
@@ -51,13 +52,13 @@ dependencies:
   geolocator: ^12.0.0
   google_fonts: ^6.2.1
   google_maps_flutter: ^2.7.0
-  google_ml_kit: ^0.18.0
   google_mlkit_face_detection: ^0.11.0
   google_sign_in: ^6.2.1
   http: ^1.2.1
   image: ^4.2.0
   image_picker: ^1.1.0
   intl: ^0.19.0
+  logger: ^2.3.0
   lottie: ^3.1.2
   meta: ^1.11.0
   path: ^1.9.0
@@ -68,6 +69,7 @@ dependencies:
   shared_preferences: ^2.2.3
   tflite_flutter: ^0.10.4
   url_launcher: ^6.3.0
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -91,6 +93,7 @@ flutter:
     - assets/images/placeholder.jpg
     - assets/images/loading.gif
     - assets/mobilefacenet.tflite
+    - assets/fonts/OpenSans-Regular.ttf
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
